force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberSponsorPayment__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberSponsorPayment__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Number of all companies payments from Sunshine act / local open sources</description>
    <label>Sponsor Payment Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>