force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberSponsorsNames__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberSponsorsNames__c</fullName>
    <description>The company collaborations / sponsorship from public sources (text format) if available in certain country)</description>
    <label>Sponsors Names Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>