force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberSponsorsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberSponsorsNumber__c</fullName>
    <description>Number of the company collaborations / sponsorship from public sources (if available in certain country)</description>
    <label>Sponsors Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>