force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberTopCollaborators__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberTopCollaborators__c</fullName>
    <description>Number of Collaborators depending on number of joint publications +clinical trials</description>
    <label>Top Collaborators Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>