force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AbsNumberTotalCitationsGenerated__c.field-meta.xml
<CustomField>
    <fullName>OCE__AbsNumberTotalCitationsGenerated__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Number of all citations generated</description>
    <label>Total Citations Generated</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>