force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account relation. Link Account Territory Fields to Account</description>
    <inlineHelpText>Account relation. Link Account Territory Fields to Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Territory Fields</relationshipLabel>
    <relationshipName>AccountTerritoryFields</relationshipName>
    <type>Lookup</type>
</CustomField>