force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AccountCountry__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountCountry__c</fullName>
    <description>Field is used as default filter for Topics</description>
    <formula>TEXT(OCE__Account__r.OCE__CountryCode__c)</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>