force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AccountTerritoryUnique__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountTerritoryUnique__c</fullName>
    <description>System field to prevent duplicates of ATF records</description>
    <label>Account Territory Unique</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>