force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AnnualCallGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__AnnualCallGoal__c</fullName>
    <description>Call Goal for the year on this Account. This is used to identify the total amount of Calls for the year for which the Rep will strive to call on the Account.</description>
    <label>Annual Call Goal</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>