force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__AvailableOffline__c.field-meta.xml
<CustomField>
    <fullName>OCE__AvailableOffline__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates Territory fields to be only downloaded to the mobile DB.</description>
    <inlineHelpText>Indicates Territory fields to be only downloaded to the mobile DB.</inlineHelpText>
    <label>Available Offline</label>
    <type>Checkbox</type>
</CustomField>