force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__CallReactivity__c.field-meta.xml
<CustomField>
    <fullName>OCE__CallReactivity__c</fullName>
    <description>Calculate Account&apos;s reactivity to calls based on historical call activity and performance, the higher the
            score, the more likely an HCP/HCO will prescribe following a call.</description>
    <inlineHelpText>Calculate Account&apos;s reactivity to calls based on historical call activity and performance, the higher the
            score, the more likely an HCP/HCO will prescribe following a call.</inlineHelpText>
    <label>Call Reactivity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>