force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__CumulativeActivityPlannedAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__CumulativeActivityPlannedAttainment__c</fullName>
    <description>Cumulative Activity Planned Attainment</description>
    <formula>(IF( OCE__POACumulativeGoal__c &gt; 0, (OCE__POAToDateCumulative__c + OCE__POAScheduledCumulative__c ) /OCE__POACumulativeGoal__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Activity Planned Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>