force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__CumulativeActivityPOAProratedGoal__c.field-meta.xml
<CustomField>
    <fullName>OCE__CumulativeActivityPOAProratedGoal__c</fullName>
    <description>Cumulative Activity POA Prorated Goal</description>
    <formula>IF(
            AND(
                OCE__POAEndDate__c &gt; OCE__POAStartDate__c,
                OCE__POAStartDate__c &lt;= TODAY()
            ),
            (TODAY() - OCE__POAStartDate__c)/(OCE__POAEndDate__c - OCE__POAStartDate__c) * OCE__POACumulativeGoal__c,
            0
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cumulative Activity POA Prorated Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>