force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__FaceToFaceCallPOAAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__FaceToFaceCallPOAAttainment__c</fullName>
    <description>Face to Face Call POA Attainment</description>
    <formula>IF( OCE__POAFaceToFaceCallGoal__c &gt; 0,  OCE__POAToDateFaceToFaceCalls__c /OCE__POAFaceToFaceCallGoal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Face to Face Call POA Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>