force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeActivity__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeActivity__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the sum of  tweets and posts sent, number of articles written in digital channels</description>
    <label>Activity Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>