force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeAudience__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeAudience__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the sum of  the followers, connections, friends, viewer, links in digital channels</description>
    <label>Audience Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>