force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeAverageKOL__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeAverageKOL__c</fullName>
    <description>Represents a weighted overall score, based on the group of certain parameters</description>
    <label>Average KOL Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>