force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeCollaborationNetwork__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeCollaborationNetwork__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the Number of co-authors on publications, clinical trials, congress, etc.</description>
    <label>Collaboration Network Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>