force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeFirstAuthorProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeFirstAuthorProfile__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade,  automatically calculated, basing on the Sum of the number of cases, when HCP has been FIRST Author publications</description>
    <label>First Author Profile Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>