force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeGrants__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeGrants__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the number of grants</description>
    <label>Grants Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>