force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeImpactFactor__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeImpactFactor__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the sum of the HCP’s re-posts+ re-tweets + mentions (Twitter, YouTube, any digital channel)</description>
    <label>Impact Factor Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>