force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeLastAuthorProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeLastAuthorProfile__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade,  automatically calculated, basing on the Sum of the number of cases, when HCP has been LAST Author publications</description>
    <label>Last Author Profile Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>