force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeNewsBlog__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeNewsBlog__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>ABCDEF grade, basing on the number of News&amp; Blog Mentions</description>
    <label>News Blog Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>