force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradePresence__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradePresence__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the sum of the digital channels, which the HCP has been  identified on</description>
    <label>Presence Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>