force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradePublicationProfile__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradePublicationProfile__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade,  automatically calculated, basing on the Sum of the all HCP&apos;s publications</description>
    <label>Publication Profile Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>