force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeScientificActivity__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeScientificActivity__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the number of publications, clinical trials, conferences, the HCP has been  identified on</description>
    <label>Scientific Activity Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>