force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeScientificInfluenceImpactFactor__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeScientificInfluenceImpactFactor__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, HCPs’ presence in scientific channels: automatically calculated category, basing on the sum of the channels, which the HCP has been identified on. Where F is “low” presence, and A is “high” presence.</description>
    <label>Scientific Influence Impact Factor Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>