force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeSocialMention__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeSocialMention__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade, basing on the sum of the mentions in social media (YouTube, news / blogs)</description>
    <label>Social Mention Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>