force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeSponsorPayment__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeSponsorPayment__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С grade, basing on the sum of the number of all companies payments from Sunshine act / local open sources</description>
    <label>Sponsor Payment Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>