force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeSponsorsNumber__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeSponsorsNumber__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade,  automatically calculated, basing on the company collaborations / sponsorship from public sources (if available in certain country)</description>
    <label>Sponsors Number Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>