force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeTopCollaborators__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeTopCollaborators__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>A,B,С,D, E, F  grade,  basing on the Number of Collaborators depending on number of joint publications +clinical trials</description>
    <label>Top Collaborators Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>