force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__GradeTotalCitationsGenerated__c.field-meta.xml
<CustomField>
    <fullName>OCE__GradeTotalCitationsGenerated__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>The company collaborations / sponsorship from public sources (text format) if available in certain country)</description>
    <label>Total Citations Generated Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>