force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__HQGuidance__c.field-meta.xml
<CustomField>
    <fullName>OCE__HQGuidance__c</fullName>
    <description>Additional information to the account goals in a free text form. This guidance is a part of Activity Plan.</description>
    <label>HQ Guidance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>