force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__IntegrationID__c.field-meta.xml
<CustomField>
    <fullName>OCE__IntegrationID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>External ID which is used for data loading only.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID which is used for data loading only.</inlineHelpText>
    <label>Integration ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>