force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__InterestArea__c.field-meta.xml
<CustomField>
    <fullName>OCE__InterestArea__c</fullName>
    <description>DEPRECATED In which therapeutic HCP works/focus (text format): Mesh Term assigned to their publications</description>
    <label>DEPRECATED Interest Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>