force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__InterestAreas__c.field-meta.xml
<CustomField>
    <fullName>OCE__InterestAreas__c</fullName>
    <description>In which therapeutic HCP works/focus (text format): Mesh Term assigned to their publications</description>
    <label>Interest Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>