force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__IsTarget__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Account is a Target. This is important in allowing the Rep to view Accounts that are Targets in their territory. Appears on Account Territory Fields page layout and Account Territory Fields related list on Organization, Wholesaler, MCO, MCO Plan, Hospital, Hospital Department, Institution, Pharmacy, HCP, and Staff.</description>
    <label>Target?</label>
    <type>Checkbox</type>
</CustomField>