force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__LastCallDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__LastCallDate__c</fullName>
    <description>Date of last submitted call within territory for the account</description>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>