force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__NextBestChannel__c.field-meta.xml
<CustomField>
    <fullName>OCE__NextBestChannel__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Ada suggestion on the best channel to be used to interact with the account, as the top ranked channel.</description>
    <label>Next Best Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallFacetoface</fullName>
                <label>Call Face-to-face</label>
            </value>
            <value>
                <fullName>CallRemote</fullName>
                <label>Call Remote</label>
            </value>
            <value>
                <fullName>CallPhone</fullName>
                <label>Call Phone</label>
            </value>
            <value>
                <fullName>CallSample</fullName>
                <label>Call Sample</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>