force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__NextBestChannels__c.field-meta.xml
<CustomField>
    <fullName>OCE__NextBestChannels__c</fullName>
    <description>{ &quot;Data&quot; : [ { &quot;Id&quot; : &quot;kajbfabgoabg80fe32&quot;, &quot;Order&quot; : 1 }
            , { &quot;Id&quot; : &quot;lsgnoabgoabgoue34f&quot;, &quot;Order&quot; : 2 }]
            }</description>
    <label>Next Best Channels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>