force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__NextBestContent__c.field-meta.xml
<CustomField>
    <fullName>OCE__NextBestContent__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>{
        &quot;Data&quot; : [
        { &quot;Id&quot; : &quot;kajbfabgoabg80fe32&quot;, &quot;Order&quot; : 1 }
        ,
        { &quot;Id&quot; : &quot;lsgnoabgoabgoue34f&quot;, &quot;Order&quot; : 2 }
        ]
        }</description>
    <label>Next Best Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>