force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__NextCall__c.field-meta.xml
<CustomField>
    <fullName>OCE__NextCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contains link to the next call</description>
    <label>Next Call</label>
    <referenceTo>OCE__Call__c</referenceTo>
    <relationshipLabel>Account Territory Fields</relationshipLabel>
    <relationshipName>AccountTerritoryFields</relationshipName>
    <type>Lookup</type>
</CustomField>