force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__NextCallDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__NextCallDate__c</fullName>
    <description>When user saves a planned call in the future against the HCP/HCO the next Call Date field from the ATF record that corresponds with the territory of the call is set with the date of the next call.</description>
    <label>Next Call Date</label>
    <type>DateTime</type>
</CustomField>