force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__NextCallObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__NextCallObjective__c</fullName>
    <description>Contains Next Call Objective from the last submitted Call.</description>
    <label>Next Call Objective</label>
    <type>TextArea</type>
</CustomField>