force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__OfflineDownloadOverride__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineDownloadOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Offline Download Override flag for making the account available for offline even when AvailableOffline is set to false</description>
    <inlineHelpText>Offline Download Override flag for making the account available for offline even when AvailableOffline is set to false</inlineHelpText>
    <label>Offline Download Override</label>
    <type>Checkbox</type>
</CustomField>