force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PhoneCallPlannedAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__PhoneCallPlannedAttainment__c</fullName>
    <description>Phone Call Planned Attainment</description>
    <formula>(IF( OCE__POAPhoneCallGoal__c &gt; 0, (OCE__POAToDatePhoneCalls__c + OCE__POAScheduledPhoneCalls__c ) /OCE__POAPhoneCallGoal__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Call Planned Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>