force-app/main/default/objects/OCE__AccountTerritoryFields__c/fields/OCE__PhoneCallPOAAttainment__c.field-meta.xml
<CustomField>
    <fullName>OCE__PhoneCallPOAAttainment__c</fullName>
    <description>What has been attained against the Rep Call Goal for the Call channel This allows the Rep to see where they are in the cycle in terms of Call attainment on the Account for current plan cycle.</description>
    <formula>IF( OCE__POAPhoneCallGoal__c &gt; 0,  OCE__POAToDatePhoneCalls__c /OCE__POAPhoneCallGoal__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Call POA Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>